--- a/interface/index.html
+++ b/interface/index.html
@@ -4,15 +4,32 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- Include jQuery Mobile stylesheets -->
-<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+<link rel="stylesheet" href="jquery/jquery.mobile-1.4.5.min.css">
 
 <!-- Include the jQuery library -->
-<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+<script src="jquery/jquery-1.11.3.min.js"></script>
 
 <!-- Include the jQuery Mobile library -->
 <script src="jquery/jquery.mobile-1.4.5.min.js"></script>
 
-
 </head>
+
+<body>
+<div data-role="page">
+
+  <div data-role="header">
+    <h1>Mobile Rescue</h1>
+  </div>
+
+  <div data-role="main" class="ui-content">
+  	
+  </div>
+
+  <div data-role="footer">
+    <h1>Dev by MR & PH</h1>
+  </div>
+
+</div>
+</body>
 
 </html>
