--- a/interface/index.html
+++ b/interface/index.html
@@ -19,11 +19,13 @@
 
   <div data-role="header">
     <h1>Mobile Rescue</h1>
-  </div>
 
-  <div data-role="main" class="ui-content">
-  	
   </div>
+	<div data-role="content">
+	<p>Press this button to generate a distress call</p>
+	<input type="submit" value="Help Me!!" icon="star" />
+
+	</div>  
 
   <div data-role="footer">
     <h1>Dev by MR & PH</h1>
