--- a/interface/status.html
+++ b/interface/status.html
@@ -19,14 +19,13 @@
 
   <div data-role="header">
     <h1>Mobile Rescue</h1>
-
   </div>
 	<div data-role="content">
+  <p>Status of your Request:</p>
+  
 	<p>Press this button to generate a distress call</p>
-	<ul data-role="listview">
-	<li><input type="submit" value="Help Me!!" icon="star" />
-	<li><a href="loc.html" data-role="button">My Location</a>
-	<li><a href="info.html" data-role="button">My Info</a>
+	<input type="submit" value="Help Me!!" icon="star" />
+
 	</div>  
 
   <div data-role="footer"  data-position="fixed">
